v19 and v22 specific files

--- a/Clickhouse-docker/Dockerfile-19
+++ b/Clickhouse-docker/Dockerfile-19
@@ -111,6 +111,7 @@ ENV TZ UTC
 RUN mkdir /docker-entrypoint-initdb.d
 
 COPY docker_related_config-19.xml /etc/clickhouse-server/config.d/
+COPY graphite_rollup_19.xml /etc/clickhouse-server/config.d/
 COPY entrypoint-19.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
